--- a/tpl/algorithmic-dependencies.html
+++ b/tpl/algorithmic-dependencies.html
@@ -1,4 +1,4 @@
-<div class="tab" ng-controller="AlgorithmicDependenciesCtrl">
+<div class="tile" ng-controller="AlgorithmicDependenciesCtrl">
     <div class="panel panel-default">
         <div class="panel-body">
             <table class="table">
