--- a/tpl/er.html
+++ b/tpl/er.html
@@ -1,4 +1,4 @@
-<div class="tab" ng-controller="ERCtrl">
+<div   class="tile" ng-controller="ERCtrl">
     <div class="panel panel-default er-model model">
         <div class="panel-heading">
             <h3 class="panel-title">ER диаграмма</h3>
