--- a/tpl/informational-requirements.html
+++ b/tpl/informational-requirements.html
@@ -1,4 +1,4 @@
-<div class="tab" ng-controller="InfromationalRequirementsCtrl">
+<div  class="tile"  ng-controller="InformationalRequirementsCtrl">
     <div class="content-box">
         <div class="btn-group buttonsBar">
             <button class="btn btn-default" ng-class="{ active: tab == 0}" ng-click="changeTab(0)"> Поиск </button>
