--- a/tpl/integrity-constraints.html
+++ b/tpl/integrity-constraints.html
@@ -1,4 +1,4 @@
-<div class="tab" ng-controller="IntegrityConstraintsCtrl">
+<div  class="tile"  ng-controller="IntegrityConstraintsCtrl">
     <!--Ограничения целостности-->
     <div class="btn-group constraints-tabgroup" role="group" aria-label="...">
         <button type="button" class="btn btn-default" ng-class="{active: isAttrs()}" ng-click="changeTab('attrs')">Атрибуты</button>
