--- a/tpl/object-relations.html
+++ b/tpl/object-relations.html
@@ -1,4 +1,4 @@
-<div class="tab" ng-controller="ObjectRelationsCtrl">
+<div  class="tile"  ng-controller="ObjectRelationsCtrl">
     <div class="panel panel-default object-relation-model model">
         <div class="panel-heading">
             <h3 class="panel-title">Взаимодействия объектов</h3>
