--- a/tpl/reports.html
+++ b/tpl/reports.html
@@ -1,4 +1,4 @@
-<div class="tab" ng-controller="ReportsCtrl">
+<div  class="tile"  ng-controller="ReportsCtrl">
     <div class="box">
         <div class="col-xs-1 panel panel-default namePanel">
             <div class="panel-heading ">
