--- a/tpl/use-case.html
+++ b/tpl/use-case.html
@@ -1,4 +1,4 @@
-<div class="tab" ng-controller="UsecaseCtrl">
+<div  class="tile"  ng-controller="UsecaseCtrl">
     <div class="panel panel-default functional-model model">
         <div class="panel-heading">
             <h3 class="panel-title">Функциональная модель</h3>
