--- a/pg/workenv.html
+++ b/pg/workenv.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../css/diagram.css">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/joint.css">
+    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
     <script src="../js/jquery-2.1.3.min.js" type="text/javascript"></script>
     <script src="../js/angular.min.js" type="text/javascript"></script>
     <script src="../js/bootstrap.min.js" type="text/javascript"></script>
@@ -32,13 +33,22 @@
     <script src="../js/services/link-manipulation-service.js"></script>
     <script src="../js/services/drag-and-drop-service.js"></script>
     <script src="../js/services/diagram-service.js"></script>
+    <script src="../js/services/algorithmic-dependency-service.js"></script>
+    <script src="../js/services/informational-requirment-service.js"></script>
+    <script src="../js/services/object-service.js"></script>
+    <script src="../js/services/report-service.js"></script>
+    <script src="../js/services/statistic-service.js"></script>
+
+    <script src="../js/factories/data-loader-factory.js"></script>
 
     <script src="../js/jquery.session.js" type="text/javascript"></script>
     <script src="../js/session.js" type="text/javascript"></script>
+
+    <script src="../js/controllers/workenv-controller.js" type="text/javascript"></script>
     <script src="../js/controllers/er-controller.js" type="text/javascript"></script>
     <script src="../js/controllers/object-relations-controller.js "></script>
     <script src="../js/controllers/use-case-controller.js "></script>
-    <script src="../js/controllers/informational-requirments-controller.js"></script>
+    <script src="../js/controllers/informational-requirements-controller.js"></script>
     <script src="../js/controllers/statistics-controller.js"></script>
     <script src="../js/controllers/reports-controller.js"></script>
     <script src="../js/controllers/integrity-constraints-controller.js"></script>
@@ -60,48 +70,49 @@
         </button>
     </div>
     <!-- Working environment -->
-    <div class="maindiv">
+    <div class="maindiv" ng-controller="WorkenvCtrl">
         <div class="topper">
             <input type="text" style="float: left; margin-left: 6px; border: none;"></input>
             <div class="tabs-buttons">
-                <div name="tab" class="chosenTab">
+                <div name="tab" class="tab" ng-class="tab === 1 ? 'chosenTab' : 'tab'" ng-click="tab = 1">
                     <h5 class="tabName">Use-case</h5>
                 </div>
-                <div name="tab" class="tab">
+                <div name="tab" class="tab" ng-class="tab === 2 ? 'chosenTab' : 'tab'" ng-click="tab = 2">
                     <h5 class="tabName">Relation</h5>
                 </div>
-                <div name="tab" class="tab" onclick="updateER();">
+                <div name="tab" class="tab" ng-class="tab === 3 ? 'chosenTab' : 'tab'" ng-click="tab = 3">
                     <h5 class="tabName">ER</h5>
                 </div>
-                <div name="tab" class="tab">
+                <div name="tab" class="tab" ng-class="tab === 4 ? 'chosenTab' : 'tab'" ng-click="tab = 4">
                     <h5 class="tabName">ИП</h5>
                 </div>
-                <div name="tab" class="tab">
+                <div name="tab" class="tab" ng-class="tab === 5 ? 'chosenTab' : 'tab'" ng-click="tab = 5">
                     <h5 class="tabName">Статистика</h5>
                 </div>
-                <div name="tab" class="tab">
+                <div name="tab" class="tab" ng-class="tab === 6 ? 'chosenTab' : 'tab'" ng-click="tab = 6">
                     <h5 class="tabName">Отчет</h5>
                 </div>
-                <div name="tab" class="tab">
+                <div name="tab" class="tab" ng-class="tab === 7 ? 'chosenTab' : 'tab'" ng-click="tab = 7">
                     <h5 class="tabName">АЗ</h5>
                 </div>
-                <div name="tab" class="tab" style="border-right: 1px solid #ac4;">
+                <div name="tab" class="tab" ng-class="tab === 8 ? 'chosenTab' : 'tab'" ng-click="tab = 8">
                     <h5 class="tabName">ОЦ</h5>
                 </div>
             </div>
         </div>
         <div class="left-panel" id="left-panel">
             <div id="pages-container" class="pages-container"></div>
+            <div ng-include="'../tpl/objects.html'"></div>
         </div>
         <div class="right-div">
-            <div id="div1" name="contentDiv" ng-include="'../tpl/use-case.html'"></div>
-            <div id="div2" name="contentDiv" ng-include="'../tpl/object-relations.html'"></div>
-            <div id="div3" name="contentDiv" ng-include="'../tpl/er.html'"></div>
-            <div id="div4" name="contentDiv" ng-include="'../tpl/informational-requirments.html'"></div>
-            <div id="div5" name="contentDiv" ng-include="'../tpl/statistics.html'"></div>
-            <div id="div6" name="contentDiv" ng-include="'../tpl/reports.html'"></div>
-            <div id="div7" name="contentDiv" ng-include="'../tpl/algorithmic-dependencies.html'"></div>
-            <div id="div8" name="contentDiv" ng-include="'../tpl/integrity-constraints.html'"></div>
+            <div id="div1" ng-show="tab === 1" class="tile-container" name="contentDiv" ng-include="'../tpl/use-case.html'"></div>
+            <div id="div2" ng-show="tab === 2" class="tile-container" name="contentDiv" ng-include="'../tpl/object-relations.html'"></div>
+            <div id="div3" ng-show="tab === 3" class="tile-container" name="contentDiv" ng-include="'../tpl/er.html'"></div>
+            <div id="div4" ng-show="tab === 4" class="tile-container" name="contentDiv" ng-include="'../tpl/informational-requirements.html'"></div>
+            <div id="div5" ng-show="tab === 5" class="tile-container" name="contentDiv" ng-include="'../tpl/statistics.html'"></div>
+            <div id="div6" ng-show="tab === 6" class="tile-container" name="contentDiv" ng-include="'../tpl/reports.html'"></div>
+            <div id="div7" ng-show="tab === 7" class="tile-container" name="contentDiv" ng-include="'../tpl/algorithmic-dependencies.html'"></div>
+            <div id="div8" ng-show="tab === 8" class="tile-container" name="contentDiv" ng-include="'../tpl/integrity-constraints.html'"></div>
         </div>
     </div>
 
