--- a/tpl/statistics.html
+++ b/tpl/statistics.html
@@ -1,4 +1,4 @@
-<div class="tab" ng-controller="StatisticsCtrl">
+<div  class="tile"  ng-controller="StatisticsCtrl">
     <div class="box">
         <div class="col-xs-1 panel panel-default namePanel">
             <div class="panel-heading ">
