--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" type="text/css" href="css/lib/pure-release-0.6.0/pure-nr.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="stylesheet" type="text/css" href="css/lib/font-awesome-4.4.0/css/font-awesome.css">
+    <link rel="stylesheet" type="text/css" href="css/upside-menu.css">
+    <script type="text/javascript" src="js/lib/jquery-2.1.4.js"></script>
     <script type="text/javascript" src="js/lib/angular.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
@@ -22,14 +24,38 @@
 <body ng-controller="guicontroller">
     <div id="background">
         <div id="header" class="header">
-            <div class="project-menu"></div>
-            <div class="user-block"></div>
+           <div class="project-menu">
+            <div id='cssmenu'>
+                <ul>
+                    <li class='active has-sub'><a href='#'><span>Project</span></a>
+                        <ul>
+                            <li class='has-sub'><a href='#'><span>Опция 1</span></a>
+                                <ul>
+                                    <li><a href='#'><span>...</span></a></li>
+                                    <li class='last'><a href='#'><span>...</span></a></li>
+                                </ul>
+                            </li>
+                            <li class='has-sub'><a href='#'><span>Опция 2</span></a>
+                                <ul>
+                                    <li><a href='#'><span>...</span></a></li>
+                                    <li class='last'><a href='#'><span>...</span></a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+            </div>
+            <div class="user-block">
+            {{ user.FullName }}
+            </div>
         </div>
         <div id="main" class="main">
             <div class="left-side">
                 <div class="pure-menu custom-restricted-width">
                     <ul class="pure-menu-list">
                         <li class="pure-menu-item"><a href="#" class="pure-menu-link">Редактировать <br> документ</a></li>
+                        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Объекты и атрибуты</a></li>
                         <li class="pure-menu-item"><a href="#" class="pure-menu-link">Use-Case</a></li>
                         <li class="pure-menu-item"><a href="#" class="pure-menu-link">Relations</a></li>
                         <li class="pure-menu-item"><a href="#" class="pure-menu-link">ER-модель</a></li>
@@ -43,19 +69,19 @@
                 <hr class="divider"></hr>
                 <!--TODO-->
                 <div class="oe">
-                        <div class="table-oa">
-                            <div class="objects-tr table-header">
-                                <div class="obj-name-td">Объекты:</div>
-                                <div class="attr-count-td">...</div>
-                            </div>
-                            <div class="tbody-div">
-                                <div class="objects-tr" ng-repeat="object in objects">
-                                    <div class="obj-name-td">{{object.Name}}</div>
-                                    <div class="attr-count-td">{{object.AttrCount}}</div>
-                                </div>
+                    <div class="table-oa">
+                        <div class="objects-tr table-header">
+                            <div class="obj-name-td">Объекты:</div>
+                            <div class="attr-count-td">...</div>
+                        </div>
+                        <div class="tbody-div">
+                            <div class="objects-tr" ng-repeat="object in objects">
+                                <div class="obj-name-td">{{object.Name}}</div>
+                                <div class="attr-count-td">{{object.AttrCount}}</div>
                             </div>
                         </div>
-                    <div class="add-obj-input">
+                    </div>
+                    <div class="add-obj-input" id="addObjInput">
                         <form class="pure-form add-form">
                             <input type="text" placeholder="Object name">
                             <button type="button" class="button-success pure-button">
