--- a/pg/workenv.html
+++ b/pg/workenv.html
@@ -8,9 +8,11 @@
     <link rel="stylesheet" href="../css/css.css">
     <link rel="stylesheet" href="../css/workenv.css">
     <link rel="stylesheet" href="../css/diagram.css">
+    <link rel="stylesheet" href="../css/figures.css">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/joint.css">
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
+
     <script src="../js/jquery-2.1.3.min.js" type="text/javascript"></script>
     <script src="../js/angular.min.js" type="text/javascript"></script>
     <script src="../js/bootstrap.min.js" type="text/javascript"></script>
@@ -18,6 +20,7 @@
     <script src="../js/joint.shapes.erd.js" type="text/javascript"></script>
     <script src="../js/snap.svg.js" type="text/javascript"></script>
     <script src="../js/jdoc.0.5.2.js" type="text/javascript"></script>
+
     <script src="../js/workenv.js" type="text/javascript"></script>
     <script src="../js/app.js" type="text/javascript"></script>
     <script src="../js/draw.js" type="text/javascript"></script>
@@ -30,9 +33,12 @@
     <script src="../js/session.js" type="text/javascript"></script>
 
 
-    <script src="../js/services/link-manipulation-service.js"></script>
-    <script src="../js/services/drag-and-drop-service.js"></script>
     <script src="../js/services/diagram-service.js"></script>
+    <script src="../js/services/figures-service.js"></script>
+    <script src="../js/services/links-service.js"></script>
+    <script src="../js/services/configure-diagram-service.js"></script>
+    <script src="../js/services/setup-drag-and-drop-service.js"></script>
+
     <script src="../js/services/algorithmic-dependency-service.js"></script>
     <script src="../js/services/informational-requirment-service.js"></script>
     <script src="../js/services/object-service.js"></script>
