--- a/DreamTeamProj/WebContent/index.html
+++ b/DreamTeamProj/WebContent/index.html
@@ -90,7 +90,7 @@
                         </form>
                     </div>
                 </div>
-                <div class="attr-box">
+                <div class="attr-box" ng-click="$event.stopPropagation();">
                     <div class="table-attr">
                         <div class="objects-tr table-header">
                             <div class="elem-name-td">Атрибуты:</div>
