--- a/pg/workenv.html
+++ b/pg/workenv.html
@@ -47,6 +47,8 @@
 
     <script src="../js/factories/data-loader-factory.js"></script>
 
+    <script src="../js/directives/visible-directive.js"></script>
+
     <script src="../js/jquery.session.js" type="text/javascript"></script>
     <script src="../js/session.js" type="text/javascript"></script>
 
@@ -111,14 +113,14 @@
             <div ng-include="'../tpl/objects.html'"></div>
         </div>
         <div class="right-div">
-            <div id="div1" ng-show="tab === 1" class="tile-container" name="contentDiv" ng-include="'../tpl/use-case.html'"></div>
-            <div id="div2" ng-show="tab === 2" class="tile-container" name="contentDiv" ng-include="'../tpl/object-relations.html'"></div>
-            <div id="div3" ng-show="tab === 3" class="tile-container" name="contentDiv" ng-include="'../tpl/er.html'"></div>
-            <div id="div4" ng-show="tab === 4" class="tile-container" name="contentDiv" ng-include="'../tpl/informational-requirements.html'"></div>
-            <div id="div5" ng-show="tab === 5" class="tile-container" name="contentDiv" ng-include="'../tpl/statistics.html'"></div>
-            <div id="div6" ng-show="tab === 6" class="tile-container" name="contentDiv" ng-include="'../tpl/reports.html'"></div>
-            <div id="div7" ng-show="tab === 7" class="tile-container" name="contentDiv" ng-include="'../tpl/algorithmic-dependencies.html'"></div>
-            <div id="div8" ng-show="tab === 8" class="tile-container" name="contentDiv" ng-include="'../tpl/integrity-constraints.html'"></div>
+            <div id="div1" visible="tab === 1" class="tile-container" name="contentDiv" ng-include="'../tpl/use-case.html'"></div>
+            <div id="div2" visible="tab === 2" class="tile-container" name="contentDiv" ng-include="'../tpl/object-relations.html'"></div>
+            <div id="div3" visible="tab === 3" class="tile-container" name="contentDiv" ng-include="'../tpl/er.html'"></div>
+            <div id="div4" visible="tab === 4" class="tile-container" name="contentDiv" ng-include="'../tpl/informational-requirements.html'"></div>
+            <div id="div5" visible="tab === 5" class="tile-container" name="contentDiv" ng-include="'../tpl/statistics.html'"></div>
+            <div id="div6" visible="tab === 6" class="tile-container" name="contentDiv" ng-include="'../tpl/reports.html'"></div>
+            <div id="div7" visible="tab === 7" class="tile-container" name="contentDiv" ng-include="'../tpl/algorithmic-dependencies.html'"></div>
+            <div id="div8" visible="tab === 8" class="tile-container" name="contentDiv" ng-include="'../tpl/integrity-constraints.html'"></div>
         </div>
     </div>
 
