--- a/pg/workenv.html
+++ b/pg/workenv.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../css/figures.css">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/joint.css">
-    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
+    <!-- <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css"> -->
 
     <script src="../js/jquery-2.1.3.min.js" type="text/javascript"></script>
     <script src="../js/angular.min.js" type="text/javascript"></script>
@@ -40,10 +40,12 @@
     <script src="../js/services/setup-drag-and-drop-service.js"></script>
 
     <script src="../js/services/algorithmic-dependency-service.js"></script>
-    <script src="../js/services/informational-requirment-service.js"></script>
     <script src="../js/services/object-service.js"></script>
     <script src="../js/services/report-service.js"></script>
     <script src="../js/services/statistic-service.js"></script>
+    <script src="../js/services/search-service.js"></script>
+    <script src="../js/services/sort-service.js"></script>
+    <script src="../js/services/filter-service.js"></script>
 
     <script src="../js/factories/data-loader-factory.js"></script>
 
