--- a/DreamTeamProj/WebContent/index.html
+++ b/DreamTeamProj/WebContent/index.html
@@ -23,12 +23,14 @@
     $.ajax({
     	
 		type : "POST",
-		url : "../DreamTeamProj/project/informational_requirements/filters/all",
+		url : "../DreamTeamProj/project/algorithmic_dependencies/all",
 		data : {
 			projectId : 0
 		},
 		dataType : "json",
 		success : function(data) {
+			var str = JSON.stringify(data);
+			console.log(str);
 			console.log(data);
 		}
 	});
