--- a/index.html
+++ b/index.html
@@ -24,30 +24,34 @@
 <body ng-controller="guicontroller" data-ng-init="init()" ng-click="hideAttrs();">
     <div id="background">
         <div id="header" class="header">
-           <div class="project-menu">
-            <div id='cssmenu'>
-                <ul>
-                    <li class='active has-sub'><a href='#'><span>Menu</span></a>
-                        <ul>
-                            <li class=''><a href='#' class="first"><span>Сохранить</span></a>
-                                <!--<ul>
-                                    <li><a href='#'><span>...</span></a></li>
-                                    <li class='last'><a href='#'><span>...</span></a></li>
-                                </ul>-->
-                            </li>
-                            <li class=''><a href='#' class="second"><span>Перейти к другому проекту</span></a>
-                                <!--<ul>
-                                    <li><a href='#'><span>...</span></a></li>
-                                    <li class='last'><a href='#'><span>...</span></a></li>
-                                </ul>-->
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
+            <div class="project-menu">
+                <div id='cssmenu'>
+                    <ul>
+                        <li class='active has-sub'><a href='#'><span>Menu</span></a>
+                            <ul>
+                                <li class=''><a href='#' class="first"><span>Сохранить</span></a>
+                                </li>
+                                <li class=''><a href='#' class="second"><span>Перейти к другому проекту</span></a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
             </div>
             <div class="user-block">
-            {{ user.FullName }}
+                <div id='cssmenu'>
+                    <ul>
+                        <li class='active'>
+                            <a href='#'><span>{{ user.FullName }}</span></a>
+                            <ul>
+                                <li class=''><a href='#' class="first"><span>Редактировать информацию</span></a>
+                                </li>
+                                <li class=''><a href='#' class="second"><span>Выход</span></a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
         <div id="main" class="main">
