--- a/pg/workenv.html
+++ b/pg/workenv.html
@@ -46,8 +46,10 @@
     <script src="../js/services/search-service.js"></script>
     <script src="../js/services/sort-service.js"></script>
     <script src="../js/services/filter-service.js"></script>
+    <script src="../js/services/utils-service.js"></script>
 
     <script src="../js/factories/data-loader-factory.js"></script>
+    <script src="../js/factories/common-controller-factory.js"></script>
 
     <script src="../js/directives/visible-directive.js"></script>
 
