--- a/tpl/algorithmic-dependencies.html
+++ b/tpl/algorithmic-dependencies.html
@@ -1,190 +1,144 @@
 <div class="tile" ng-controller="AlgorithmicDependenciesCtrl">
-    <div class="panel panel-default">
-        <div class="panel-body">
-            <table class="table">
-                <tr>
-                    <td>Рез. атрибут</td>
-                    <td>
-                        <div class="btn-group" style="margin-top:2%;">
-                            <button type="button" data-toggle="dropdown" class="btn btn-default dropdown-toggle">
-                                Объект
-                                <span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu">
-                                <li><a href="#">Пункт 1</a></li>
-                                <li><a href="#">Пункт 2</a></li>
-                                <li><a href="#">Пункт 3</a></li>
-                            </ul>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="btn-group" style="margin-top:2%;">
-                            <button type="button" data-toggle="dropdown" class="btn btn-default dropdown-toggle">
-                                Объект
-                                <span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu">
-                                <li><a href="#">Пункт 1</a></li>
-                                <li><a href="#">Пункт 2</a></li>
-                                <li><a href="#">Пункт 3</a></li>
-                            </ul>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>Атрибуты источники</td>
-                    <td colspan="2">
-                        <div class="panel panel-default  attr-src">
-                            <div class="panel-body">
-                                <table class="table">
-                                    <thead>
-                                        <tr>
-                                            <th>
-                                                Объект
-                                            </th>
-                                            <th>
-                                                Атрибут
-                                            </th>
-                                            <th colspan="2">
-                                                Переменная
-                                            </th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr>
-                                            <td>
-                                                Объект 1
-                                            </td>
-                                            <td>
-                                                Атрибут 1
-                                            </td>
-                                            <td>
-                                                Х
-                                            </td>
-                                            <td>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>
-                                                Объект 1
-                                            </td>
-                                            <td>
-                                                Атрибут 2
-                                            </td>
-                                            <td>
-                                                Y
-                                            </td>
-                                            <td>
-                                            </td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                    </td>
-                </tr>
-                <tr>
-                    <td>Формула</td>
-                    <td colspan="2">
-                        <input type="text" class="form-control" placeholder="Формула...">
-                    </td>
-                </tr>
-            </table>
+    <div class="box">
+        <div class="col-xs-1 panel panel-default namePanel">
+            <div class="panel-heading ">
+                <h3 class="panel-title h2">Зависимость</h3>
+            </div>
+            <div class="panel-body">
+                <div class="list-group  objects-select">
+                    <a ng-repeat="d in dependencies" ng-class="{active: d.id === dependency.id}" href="#" ng-click="selectDependency(d)" class="list-group-item">{{d.name}}</a>
+                </div>
             </div>
             <div class="panel-footer">
-
+                <div class="input-group">
+                    <input type="text" class="form-control" placeholder="Название..." ng-model="dependencyName" ng-keypress="onKeypress($event)">
+                    <span class="input-group-btn">
+                        <button class="btn btn-default" type="button" ng-click="addDependency()">+</button>
+                    </span>
+                </div>
             </div>
+        </div>
+        <div class="panel panel-default detailsPanel">
+            <div class="panel-heading ">
+                <h3 class="panel-title">Детали зависимости</h3>
             </div>
-
-            <div class="panel panel-default">
-                <div class="panel-body">
-                    <table class="table">
-                        <tr>
-                            <td>Рез. атрибут</td>
-                            <td>
-                                <div class="btn-group" style="margin-top:2%;">
-                                    <button type="button" data-toggle="dropdown" class="btn btn-default dropdown-toggle">
-                                        Объект
-                                        <span class="caret"></span>
-                                    </button>
-                                    <ul style="margin-left: 170%" class="dropdown-menu">
-                                        <li><a href="#">Пункт 1</a></li>
-                                        <li><a href="#">Пункт 2</a></li>
-                                        <li><a href="#">Пункт 3</a></li>
-                                    </ul>
-                                </div>
-                            </td>
-                            <td>
-                                <div class="btn-group" style="margin-top:2%;">
-                                    <button type="button" data-toggle="dropdown" class="btn btn-default dropdown-toggle">
-                                        Объект
-                                        <span class="caret"></span>
-                                    </button>
-                                    <ul style="margin-left: 170%" class="dropdown-menu">
-                                        <li><a href="#">Пункт 1</a></li>
-                                        <li><a href="#">Пункт 2</a></li>
-                                        <li><a href="#">Пункт 3</a></li>
-                                    </ul>
-                                </div>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>Атрибуты источники</td>
-                            <td colspan="2">
-                                <div class="panel panel-default  attr-src">
-                                    <div class="panel-body">
-                                        <table class="table">
-                                            <thead>
-                                                <tr>
-                                                    <th>
-                                                        Объект
-                                                    </th>
-                                                    <th>
-                                                        Атрибут
-                                                    </th>
-                                                    <th colspan="2">
-                                                        Переменная
-                                                    </th>
-                                                </tr>
-                                            </thead>
-                                            <tbody>
-                                                <tr>
-                                                    <td>
-                                                        Объект 1
-                                                    </td>
-                                                    <td>
-                                                        Атрибут 1
-                                                    </td>
-                                                    <td>
-                                                        Х
-                                                    </td>
-                                                    <td>
-                                                    </td>
-                                                </tr>
-                                                <tr>
-                                                    <td>
-                                                        Объект 1
-                                                    </td>
-                                                    <td>
-                                                        Атрибут 2
-                                                    </td>
-                                                    <td>
-                                                        Y
-                                                    </td>
-                                                    <td>
-                                                    </td>
-                                                </tr>
-                                            </tbody>
-                                        </table>
-                                    </div>
-                                </div>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>Формула</td>
-                            <td colspan="2">
-                                <input type="text" class="form-control" placeholder="Формула...">
-                            </td>
-                        </tr>
-                    </table>
+            <div class="panel-body" ng-show="dependency">
+                <div class="form-group">
+                    <h4>Результирующий атрибут</h4>
+                    <div class="btn-group">
+                        <button type="button" data-toggle="dropdown" class="btn btn-default dropdown-toggle">
+                            {{dependency.resultField.object ? dependency.resultField.object.name : 'Выберите объект'}}
+                            <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu">
+                            <li><a href="#" ng-repeat="object in objects" ng-click="setDestObj(object)">{{object.name}}</a></li>
+                        </ul>
+                    </div>
+                    <div class="btn-group" ng-show="dependency.resultField.object">
+                        <button type="button" data-toggle="dropdown" class="btn btn-default dropdown-toggle">
+                            {{dependency.resultField.object.attr ? dependency.resultField.object.attr.name : 'Выберите атрибут'}}
+                            <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu">
+                            <li><a href="#" ng-repeat="attr in getAttrs(dependency.resultField.object)" ng-click="setDestAttr(attr)">{{attr.name}}</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <h4>Атрибуты источники</h4>
+                    <div class="panel panel-default  attr-src">
+                        <div class="panel-body" ng-show="dependency.sourceFields.length">
+                            <table class="table">
+                                <thead>
+                                    <tr>
+                                        <th>Объект</th>
+                                        <th>Атрибут</th>
+                                        <th>Переменная</th>
+                                        <th></th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr ng-repeat="source in dependency.sourceFields">
+                                        <td>
+                                            <div class="btn-group">
+                                                <button type="button" data-toggle="dropdown" class="btn btn-default dropdown-toggle">
+                                                    {{source.object.name}}
+                                                    <span class="caret"></span>
+                                                </button>
+                                                <ul class="dropdown-menu">
+                                                    <li><a href="#" ng-repeat="object in objects" ng-click="replaceSourceObj(source, object)">{{object.name}}</a></li>
+                                                </ul>
+                                            </div>
+                                        </td>
+                                        <td>
+                                            <div class="btn-group">
+                                                <button type="button" data-toggle="dropdown" class="btn btn-default dropdown-toggle">
+                                                    {{source.object.attr.name}}
+                                                    <span class="caret"></span>
+                                                </button>
+                                                <ul class="dropdown-menu">
+                                                    <li><a href="#" ng-repeat="attr in getAttrs(source.object)" ng-click="replaceSourceAttr(source, attr)">{{attr.name}}</a></li>
+                                                </ul>
+                                            </div>
+                                        </td>
+                                        <td>
+                                            <input type="text" class="form-control" readonly="true" ng-model="source.variable">
+                                        </td>
+                                        <td>
+                                            <span ng-click="removeSource(source)" class="badge">x</span>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                        <div class="panel-footer attr-src-new">
+                            <h5>Добавить новый источник</h5>
+                            <table class="table">
+                                <tbody>
+                                    <tr>
+                                        <td>
+                                            <div class="btn-group">
+                                                <button type="button" data-toggle="dropdown" class="btn btn-default dropdown-toggle">
+                                                    {{sourceObj ? sourceObj.name : 'Выберите объект'}}
+                                                    <span class="caret"></span>
+                                                </button>
+                                                <ul class="dropdown-menu">
+                                                    <li><a href="#" ng-repeat="object in objects" ng-click="setSourceObj(object)">{{object.name}}</a></li>
+                                                </ul>
+                                            </div>
+                                        </td>
+                                        <td>
+                                            <div class="btn-group" ng-show="sourceObj">
+                                                <button type="button" data-toggle="dropdown" class="btn btn-default dropdown-toggle">
+                                                    {{sourceObj.attr ? sourceObj.attr.name : 'Выберите атрибут'}}
+                                                    <span class="caret"></span>
+                                                </button>
+                                                <ul class="dropdown-menu">
+                                                    <li><a href="#" ng-repeat="attr in getAttrs(sourceObj)" ng-click="setSourceAttr(attr)">{{attr.name}}</a></li>
+                                                </ul>
+                                            </div>
+                                        </td>
+                                        <td>
+                                            <input type="text" class="form-control" placeholder="Переменная..."ng-model="sourceVariable">
+                                        </td>
+                                        <td>
+                                            <button class="btn btn-default" type="button" ng-click="addSource()">+</button>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <h4>Формула</h4>
+                    <div class="input-group form-control">
+                        <input type="text" class="form-control" ng-disabled="!formulaEditing" placeholder="{{formulaEditing ? 'Введите формулу...' : 'Не указано...'}}" ng-model="dependency.formula" ng-keypress="onKeypress($event)">
+                        <span class="input-group-btn">
+                            <button class="btn btn-default" type="button" ng-hide="formulaEditing" ng-click="editFormula()">Изменить</button>
+                            <button class="btn btn-default" type="button" ng-if="formulaEditing" ng-click="saveFormula()">Сохранить</button>
+                        </span>
+                    </div>
                 </div>
             </div>
         </div>
