--- a/tpl/statistics.html
+++ b/tpl/statistics.html
@@ -1,4 +1,4 @@
-<div  class="tile"  ng-controller="StatisticsCtrl">
+<div class="tile" ng-controller="StatisticsCtrl">
     <div class="box">
         <div class="col-xs-1 panel panel-default namePanel">
             <div class="panel-heading ">
@@ -6,12 +6,12 @@
             </div>
             <div class="panel-body">
                 <div class="list-group  objects-select">
-                    <a ng-repeat="statistic in statistics track by $index" ng-class="{active: isSelected(statistic.name)}" href="#" ng-click="selectStatistic($index)" class="list-group-item">{{statistic.name}}</a>
+                    <a ng-repeat="s in statistics" ng-class="{active: s.id === statistic.id}" href="#" ng-click="selectStatistic(s)" class="list-group-item">{{s.name}}</a>
                 </div>
             </div>
             <div class="panel-footer">
                 <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Название..." ng-model="newStatisticName">
+                    <input type="text" class="form-control" placeholder="Название..." ng-model="statisticName" ng-keypress="onKeypress($event)">
                     <span class="input-group-btn">
                         <button class="btn btn-default" type="button" ng-click="addStatistic()">+</button>
                     </span>
@@ -21,28 +21,28 @@
         <div class="panel panel-default detailsPanel ">
             <div class="panel-heading ">
                 <h3 class="panel-title">Детали статистики</h3>
-                {{selectedStatistic.name}}
             </div>
-            <div class="panel-body" ng-show="selectedStatistic">
-                <div ng-repeat="addedObject in getAddedObjects()" class="panel panel-default">
+            <div class="panel-body" ng-show="statistic">
+                <div ng-repeat="object in statistic.objects" class="panel panel-default">
                     <div class="panel-body stat-object">
-                        <h4>{{addedObject.name}}</h4>
+                        <h4>{{object.name}}</h4>
+                        <span ng-click="removeObject(object)" class="badge">x</span>
 
                         <ul class="list-group">
-                            <li ng-repeat="attr in getAddedAttrs(addedObject.name)" class="list-group-item">
+                            <li ng-repeat="attr in object.attrs" class="list-group-item">
                                 {{attr.name}}
-                                <span ng-click="removeAttr(addedObject.name, attr.name)" class="badge">x</span>
+                                <span ng-click="removeAttr(object, attr)" class="badge">x</span>
                             </li>
                         </ul>
-                        <div class="btn-group">
+                        <div class="btn-group" ng-show="availableAttrs[object.id].length">
                             <div class="dropdown attrDropup" ng-click="initDropdowns()">
                                 <button class="btn btn-default dropdown-toggle" type="button" id="" data-toggle="dropdown">
                                     <span>Добавить атрибут</span>
                                     <span class="caret"></span>
                                 </button>
                                 <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
-                                    <li role="presentation" ng-repeat="attr in getUnaddedAttrs(addedObject.name)">
-                                        <a role="menuitem" ng-click="addAttr(addedObject.name, attr.name)" tabindex="-1" href="#">
+                                    <li role="presentation" ng-repeat="attr in availableAttrs[object.id]">
+                                        <a role="menuitem" ng-click="addAttr(object, attr)" tabindex="-1" href="#">
                                                     {{attr.name}}
                                                 </a>
                                     </li>
@@ -51,16 +51,16 @@
                         </div>
                     </div>
                 </div>
-                <div class="btn-group">
+                <div class="btn-group" ng-show="availableObjects.length">
                     <div class="dropdown objDropup">
                         <button class="btn btn-default dropdown-toggle" type="button" id="" data-toggle="dropdown">
                             <span>Добавить объект</span>
                             <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
-                            <li role="presentation" ng-repeat="unaddedObject in getUnaddedObjects()">
-                                <a role="menuitem" ng-click="addObject(unaddedObject.name)" tabindex="-1" href="#">
-                                            {{unaddedObject.name}}
+                            <li role="presentation" ng-repeat="object in availableObjects">
+                                <a role="menuitem" ng-click="addObject(object)" tabindex="-1" href="#">
+                                            {{object.name}}
                                         </a>
                             </li>
                         </ul>
